add css styling finalize js

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/master.css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -11,30 +12,33 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="display-3">Deck of Cards</h1>
-      <form id="cards">
-        <label for="diamond">
-          <input name="suit" type="radio" value="diamond">
-          Diamond
-        </label>
-        <label for="hearts">
-          <input name="suit" type="radio" value="hearts">
-          Hearts
-        </label>
-        <label for="spades">
-          <input name="suit" type="radio" value="spades">
-          Spades
-        </label>
-        <label for="clubs">
-          <input name="suit" type="radio" value="clubs">
-          Clubs
-        </label>
-        <label for="all">
-          <input name="suit" type="radio" value="all">
-          All
-        </label>
-        <button type="submit" name="button">Submit</button>
-      </form>
+      <div class="jumbotron">
+        <h1 class="display-2">Deck of Cards</h1>
+        <p class="lead">Pick a suit, any suit!</p>
+        <form id="cards">
+          <label for="diamond">
+            <input name="suit" type="radio" value="diamond">
+            Diamond
+          </label>
+          <label for="hearts">
+            <input name="suit" type="radio" value="hearts">
+            Hearts
+          </label>
+          <label for="spades">
+            <input name="suit" type="radio" value="spades">
+            Spades
+          </label>
+          <label for="clubs">
+            <input name="suit" type="radio" value="clubs">
+            Clubs
+          </label>
+          <label for="all">
+            <input name="suit" type="radio" value="all">
+            All
+          </label>
+          <button type="submit" class="btn btn-dark" name="button">Submit</button>
+        </form>
+      </div>
       <div id="results">
         <ul class="list">
         </ul>
