--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="lead">Pick a suit, any suit!</p>
         <form id="cards">
           <label for="diamond">
-            <input name="suit" type="radio" value="diamond">
+            <input name="suit" type="radio" value="diamonds">
             Diamond
           </label>
           <label for="hearts">
